ds-1col--node-newsletter-agenda-full.html.twig to delete console.log.

--- a/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-agenda-full.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-agenda-full.html.twig
@@ -67,7 +67,7 @@
  */
 #}
 
-{{ attach_library('ensemble/newsletter') }}
+{{ attach_library('ensemble/newsletteragenda') }}
 {%
   set classes = [
     node.bundle|clean_class,
@@ -231,9 +231,9 @@
               >
                 <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                
+
         <tr>
-      
+
             <td
                class="" style="vertical-align:top;width:399.99999999999994px;"
             >
@@ -255,7 +255,7 @@
 
                 <!--[if mso | IE]>
             </td>
-          
+
             <td
                class="" style="vertical-align:top;width:199.99999999999997px;"
             >
@@ -278,9 +278,9 @@
 
                 <!--[if mso | IE]>
             </td>
-          
+
         </tr>
-      
+
                   </table>
                 <![endif]-->
               </td>
@@ -293,13 +293,13 @@
           </td>
         </tr>
       </table>
-      
+
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
-      
+
         <v:rect  style="width:600px;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false">
         <v:fill  origin="0.5, 0" position="0.5, 0" src="http://www.resistons.net/themes/contrib/ensemble/less/images/newsletter/bandeau-newsletter.png" color="#ffffff" type="tile" />
         <v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0">
@@ -339,9 +339,9 @@
 
                   <!--[if mso | IE]>
             </td>
-          
+
         </tr>
-      
+
                   </table>
                 <![endif]-->
                 </td>
@@ -354,11 +354,11 @@
       <!--[if mso | IE]>
         </v:textbox>
       </v:rect>
-    
+
           </td>
         </tr>
       </table>
-      
+
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
@@ -372,9 +372,9 @@
             <tr>
               <td style="direction:ltr;font-size:0px;padding:0 0 0 0;padding-bottom:20px;padding-top:20px;text-align:center;vertical-align:middle;">
                 <!--[if mso | IE]>
-                  <table role="presentation" border="0" cellpadding="0" cellspacing="0">    
+                  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
         <tr>
-      
+
             <td
                class="" style="vertical-align:middle;width:600px;"
             >
@@ -396,8 +396,8 @@
                       <td align="left" vertical-align="middle" style="font-size:0px;padding:0 0 0 0;padding-top:0px;padding-right:25px;padding-bottom:10px;padding-left:25px;word-break:break-word;">
                         <div style="font-family:Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;color:#5e6977;">
                           <div style="font-size: 15px; margin: 10px 0;" id="newsletter-chapo">
-                            Texte d'introduction chapo Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra, nulla eu sodales dapibus, 
-                            metus odio lacinia tellus, id dictum dolor metus ut orci. Donec facilisis elit eu ultrices sodales. 
+                            Texte d'introduction chapo Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra, nulla eu sodales dapibus,
+                            metus odio lacinia tellus, id dictum dolor metus ut orci. Donec facilisis elit eu ultrices sodales.
                           </div>
                         </div>
                       </td>
@@ -407,9 +407,9 @@
 
                 <!--[if mso | IE]>
             </td>
-          
+
         </tr>
-      
+
                   </table>
                 <![endif]-->
               </td>
@@ -422,7 +422,7 @@
           </td>
         </tr>
       </table>
-      
+
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
@@ -437,9 +437,9 @@
               <td style="direction:ltr;font-size:0px;padding:20px 0;padding-top:0px;text-align:center;vertical-align:top;">
                 <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                
+
         <tr>
-      
+
             <td
                class="" style="vertical-align:top;width:300px;"
             >
@@ -465,7 +465,7 @@
 
                 <!--[if mso | IE]>
             </td>
-          
+
             <td
                class="" style="vertical-align:top;width:300px;"
             >
@@ -476,7 +476,7 @@
                     <tr>
                       <td align="left" vertical-align="top" style="font-size:0px;padding:0 0 0 0;padding-top:0;padding-right:25px;padding-bottom:10px;padding-left:25px;word-break:break-word;">
                         <div style="font-family:Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;color:#5e6977;">
-                          <h2 style="font-size: 20px; font-weight: bold;margin-top:0; padding-top:0;" class="newsletter-title-event"> 
+                          <h2 style="font-size: 20px; font-weight: bold;margin-top:0; padding-top:0;" class="newsletter-title-event">
                               <a href="http://www.resistons.net/index.php/agenda/creer-evenement-44" style="color:#f9605c;font-size: 20px; font-weight: bold;margin-top:0; padding-top:0" target="_blank">
                             FORMATION VISA 34 (VIGILANCE ET INITIATIVES SYNDICALES ANTIFASCISTES)
                           </a>
@@ -490,6 +490,7 @@
                               <div class="newsletter-date"><span >26 janvier 2019 - 10:00</span><br /></div>
                               <div class="newsletter-date"><span >27 janvier 2019 - 10:00</span><br /></div>
                             </div>
+                          </p>
                           <p style="font-size: 15px; margin: 10px 0;">
                             <b style="font-weight: bold;">Adresse</b> :<br />
                             <span class="newsletter-address">Bourse du travail</span>
@@ -516,9 +517,9 @@
 
                 <!--[if mso | IE]>
             </td>
-          
+
         </tr>
-      
+
                   </table>
                 <![endif]-->
               </td>
@@ -531,7 +532,7 @@
           </td>
         </tr>
       </table>
-      
+
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
@@ -575,9 +576,9 @@
 
                 <!--[if mso | IE]>
             </td>
-          
+
         </tr>
-      
+
                   </table>
                 <![endif]-->
               </td>
