ds-1col--node-newsletter-agenda-full.html.twig up to change unsub link and event title.

--- a/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-agenda-full.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-agenda-full.html.twig
@@ -245,7 +245,7 @@
                       <td align="left" style="font-size:0px;padding:0px 0px 0px 25px;padding-top:0px;padding-bottom:0px;word-break:break-word;" >
                         <div style="font-family:Arial, sans-serif;font-size:11px;line-height:22px;text-align:left;color:#5e6977;">
                           <p style="font-size: 15px; margin: 10px 0;">
-                            <span style="font-size:12px">Ensemble!34 vous informe des prochains événements citoyens</span>
+                            <span style="font-size:12px">Ensemble!34 vous informe des prochains événements politiques et culturels</span>
                           </p>
                         </div>
                       </td>
@@ -558,7 +558,7 @@
                         <div style="font-family:Arial, sans-serif;font-size:11px;line-height:22px;text-align:center;color:#5e6977;">
                           <p style="font-size: 15px; margin: 10px 0;">
                             Cet email a été envoyé à [[EMAIL_TO]],
-                            [[UNSUB_LINK_FR]]
+                            <a href="[[UNSUB_LINK_FR]]">Se désabonner</a>
                           </p>
                         </div>
                       </td>
