ds-1col--node-newsletter-articles-full.html.twig up to change unsub link

--- a/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-articles-full.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-articles-full.html.twig
@@ -548,7 +548,7 @@
                         <div style="font-family:Arial, sans-serif;font-size:11px;line-height:22px;text-align:center;color:#5e6977;">
                           <p style="font-size: 15px; margin: 10px 0;">
                             Cet email a été envoyé à [[EMAIL_TO]],
-                            [[UNSUB_LINK_FR]]
+                            <a href="[[UNSUB_LINK_FR]]">Se désabonner</a>
                           </p>
                         </div>
                       </td>
