ds-2col-stacked--node-article.html.twig up to add facebook button.

--- a/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-article.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-article.html.twig
@@ -39,7 +39,7 @@
   <div class="col-md-9">
 <div class="same-height-col">
     <{{ left_wrapper }}{{ left_attributes.addClass('group-left') }}>
-    <div class="fb-like" data-width="" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+    <div class="fb-like" data-width="" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
       {{ left }}
     </{{ left_wrapper }}>
   </div>
