LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -586,3 +586,16 @@ button.navbar-toggle {
     top: 0;
   }
 }
+
+/* Réseaux sociaux */
+.social-buttons {
+  margin-bottom : 12px;
+  border-bottom: 1px solid @red-ensemble;
+  border-top: 1px solid @red-ensemble;
+  padding: 12px 0;
+  #twitter-widget-0{
+    position: relative !important;
+    top: 3px;
+    margin-right: 20px;
+  }
+}
