--- a/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-event.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-event.html.twig
@@ -21,6 +21,8 @@
  */
 #}
 <{{ outer_wrapper }}{{ attributes.addClass('ds-2col-stacked', 'clearfix') }}>
+<div id="fb-root"></div>
+<script async crossorigin="anonymous" defer src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v3.3&appId=1815308221819289&autoLogAppEvents=1"></script>
 
 <div class="row">
   <div class="col-md-12">
@@ -33,6 +35,24 @@
 <div class="row">
   <div class="col-md-6">
     <{{ left_wrapper }}{{ left_attributes.addClass('group-left') }}>
+    <div class="social-buttons">
+
+            <a class="twitter-share-button" data-count="none" href="https://twitter.com/share">Tweet</a>
+            <script>
+              !function (d, s, id) {
+                var js,
+                  fjs = d.getElementsByTagName(s)[0],
+                  p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (! d.getElementById(id)) {
+                  js = d.createElement(s);
+                  js.id = id;
+                  js.src = p + '://platform.twitter.com/widgets.js';
+                  fjs.parentNode.insertBefore(js, fjs);
+                }
+              }(document, 'script', 'twitter-wjs');
+            </script>
+            <div class="fb-like" data-action="like" data-layout="standard" data-share="true" data-show-faces="false" data-size="small" data-width=""></div>
+          </div>
       {{ left }}
     </{{ left_wrapper }}>
   </div>
