--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -12,6 +12,12 @@ body {
       }
     }
   }
+  strong {
+    font-weight: bold;
+  }
+  em {
+    font-style: italic;
+  }
   .container {
     background-color: white;
   }
